  empty area in the listview has been added. The option can be
  set via Tools > Options > Advanced > Go up on double click
  in listview.
- When right-clicking a bookmark in the main menu, a context menu
  is now shown.
- Added Arabic (United Arab Emirates), Greek and Portuguese
  (Brazil) translations.
- The layout will now be switched to RTL when using the Arabic or
  Hebrew translations.

Bug fixes:
- Fixed a crash that could occur on startup when the "Open new
  tabs next to the current one" option was enabled.
- Fixed a crash that could occur when autosizing columns.
- Fixed a crash that could occur when retrieving the icon for a
  treeview item. See #385.
- Fixed a crash that could occur when attempting to create a
  folder in a location where the total path length for the new
  item would be greater than 260 characters.
- Fixed a crash that could occur when retrieving the status of a
  network adapter. See #455.
- Fixed a crash that could occur after switching from thumbnails
  view. See #460.
- Fixed a crash that could occur during application shutdown. See
  #388.
- Non US-ASCII characters weren't being properly handled on the
  command line. See #266.
- Quoted paths are now consistently handled correctly when passed
  on the command line. This is important, for example, when
  multiple paths are being passed in and more than one path
  contains spaces (and therefore more than one path will need to
  be enclosed in double quotes).
- If a folder had an overlay icon, the icon for the folder itself
  would fail to show up in a variety of places (e.g. in the tab
  control, the manage bookmarks dialog, various menus).
- Previously, if an item was cut or copied within a tab and the
  tab was closed, the clipboard data would be lost when the
  application exited. Now, the clipboard is flushed when the tab
  is closed, which ensures the data will be retained, even once
  the application has exited.
- When running the application at 150% DPI, bookmarks wouldn't