@@ -23,6 +23,7 @@ inline const wchar_t REGISTRY_SETTINGS_KEY_NAME[] = L"Settings";
 inline const wchar_t CONFIG_FILE_FILENAME[] = L"config.xml";
 inline const wchar_t CONFIG_FILE_ROOT_NODE_NAME[] = L"ExplorerPlusPlus";
 inline const wchar_t CONFIG_FILE_SETTINGS_NODE_NAME[] = L"Settings";
+inline const wchar_t CONFIG_FILE_ENV_VAR_NAME[] = L"EXPLORERPP_CONFIG";
 
 std::wstring GetConfigFilePath();
 
